adds share application to main screen and share title and the body of the detailes

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -28,6 +28,12 @@
     <item
         android:id="@+id/action_theme"
         android:icon="@drawable/ic_lightbulb"
-        android:title="Theme"
+        android:title="@string/dark_theme"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share_application"
+         />
 </menu>
