--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
   ~ Copyright (c) 2020 Shreyas Patil
@@ -30,11 +29,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        tools:context=".ui.main.MainActivity">
+        tools:context=".ui.main.MainActivity"
+        app:layoutDescription="@xml/activity_main_scene">
 
         <LinearLayout
             android:id="@+id/networkStatusLayout"
@@ -64,5 +64,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/networkStatusLayout"
             tools:listitem="@layout/item_post" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
